# DeepPic

./: .gitignore  CMakeLists.txt  InstallLibraries.cmake  README.md  about_json_api.md
backend/: CMakeLists.txt
backend/project/include/: BoostSerializer.h  Client.h  JsonExtensions.h  JsonPolymorphic.h  JsonSerializer.h  MainServer.h  SHA256.h  Serializer.h  Server.h  SocketClient.h  Transporter.h
backend/project/src/: SHA256.c  SharedDocumentServer.cpp  SocketClient.cpp  aboba.cpp
backend/project/test/: main.cpp
client/: CMakeLists.txt
client/project/include/: Brush.h  Canvas.h  Commands.h  CommonClient.h  MainWindow.h  PaintScene.h  Palette.h  ParametersPanel.h  UICommandExecutor.h
client/project/src/: Brush.cpp  Canvas.cpp  Changer.cpp  MainWindow.cpp  PaintScene.cpp  ParametersPanel.cpp  ToolsPanel.cpp  main.cpp
client/project/test/: main_window_test.cpp
commands/: CMakeLists.txt
commands/project/include/: Command.h  CommandBus.h  CommandExecutor.h  LocalCommandExecutor.h  NetworkCommandExecutor.h
commands/project/include/command/: Command.h  NetworkCommand.h
commands/project/src/: CommandBus.cpp  LocalCommandExecutor.cpp  NetworkCommandExecutor.cpp  sample.cpp
commands/project/src/command/: Command.cpp  NetworkCommand.cpp
commands/project/test/: HelloCommand.h  JsonconsDefinitions.h  executors.cpp  serializing.cpp
project/ServerConnection/include/: ServerConnection.h
project/ServerConnection/src/: ServerConnection.cpp
project/backend/include/: BaseClient.h  DocumentClient.h  IManageCommand.h  Server.h  SharedDocument.h
project/backend/src/: BaseClient.cpp  Connection.cpp  DocumentClient.cpp  IManageCommand.cpp  MainServer.cpp  Server.cpp  SharedDocument.cpp  SharedDocumentServer.cpp  main.cpp
project/backend/unit_tests/: main.cpp
project/client/: CMakeLists.txt  MainWindow.cpp
project/client/include/: Base64.h  Brush.h  Canvas.h  Changer.h  Connector.h  MainWindow.h  PaintScene.h  Palette.h  ParametersPanel.h  ServerConnection.h  ToolsPanel.h
project/client/src/: Base64.cpp  Brush.cpp  Canvas.cpp  Changer.cpp  Connector.cpp  MainWindow.cpp  PaintScene.cpp  Palette.cpp  ParametersPanel.cpp  ServerConnection.cpp  ToolsPanel.cpp  main.cpp  main_window_test.cpp
project/client/widgets/main_window/: CMakeLists.txt
project/client/widgets/main_window/include/: MainWindow.h
project/client/widgets/main_window/src/: MainWindow.cpp
project/include/: Command.h  CommandConstructor.h  Connection.h  HelloCommand.h  IManageCommand.h  JsonconsDefinitions.h  MainServer.h  Server.h  Settings.h  SharedDocumentServer.h
project/sharedDocument/include/: Client.h  SharedDocument.h
project/sharedDocument/src/: Client.cpp  SharedDocument.cpp  main.cpp
project/src/: Command.cpp  CommandConstructor.cpp  Connection.cpp  HelloCommand.cpp  IManageCommand.cpp  MainServer.cpp  Server.cpp  SharedDocumentServer.cpp  main.cpp
project/unit_tests/: main.cpp
server/: CMakeLists.txt
server/project/include/: CommonServer.h
server/project/src/: main.cpp
server/project/test/: main.cpp
